# python-proxy

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
src/proxy/: main.py  mapper.py
src/proxy/api/: deps.py  dispatch.py  middleware.py
src/proxy/core/: config.py  exceptions.py  http_client.py  logging.py  ratelimit.py
src/proxy/providers/: base.py  openligadb.py  registry.py
src/proxy/schemas/: dispatch.py  operations.py
tests/: test_dispatch.py
